[workspace]
members = [
	"oxide-auth",
	"oxide-auth-async",
	"oxide-auth-actix",
	"oxide-auth-actix/examples/actix-example",
	"oxide-auth-axum",
	"oxide-auth-iron",
	"oxide-auth-poem",
	"oxide-auth-rocket",
	"oxide-auth-rouille",
	"oxide-auth-db",
	"oxide-auth-db/examples/redis-example",
	"oxide-auth-db/examples/spin-kv-example",
	"oxide-auth-spin",
	"oxide-auth-spin/examples/spin-example"
]
