[package]
name = "oxide-auth-spin"
version = "0.1.0"
authors = ["Justin Pflueger <justin.pflueger@fermyon.com>"]
repository = "https://github.com/HeroicKatora/oxide-auth.git"
edition = "2018"

description = "Combines oxide-auth with a spin web server"
readme = "Readme.md"
keywords = ["oauth", "server", "oauth2", "spin"]
categories = ["web-programming::http-server", "authentication"]
license = "MIT OR Apache-2.0"

[dependencies]
oxide-auth = { version = "0.5.0", path = "../oxide-auth" }
serde_urlencoded = "0.7"
url = "2"

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
