[package]
name = "spin-kv-example"
authors = ["Justin Pflueger <justin.pflueger@fermyon.com>"]
description = "An example app using the Spin SDK and Key-Value backed storage"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = [ "cdylib" ]

[dependencies]
anyhow = "1"
bytes = "1"
http = "0.2"
spin-sdk = { git = "https://github.com/fermyon/spin", tag = "v1.0.0" }
wit-bindgen-rust = { git = "https://github.com/bytecodealliance/wit-bindgen", rev = "cb871cfa1ee460b51eb1d144b175b9aab9c50aba" }

oxide-auth = { version = "0.5.1", path = "../../../oxide-auth" }
oxide-auth-db = { version = "0.2.0", path = "../..", features = ["with-spin-kv"] }
oxide-auth-spin = { version = "0.1.0", path = "../../../oxide-auth-spin" }
chrono = "0.4.24"
